--- a/Mission 1/index.html
+++ b/Mission 1/index.html
@@ -61,6 +61,9 @@
 <div class="image-container">
              <center><img src="floating lights.gif" alt="gif 1" width="1800" heigth="1179"></center>
 </div>       
+
+<a href= "../sommaire.html">Retour</a>
+
 <body>     
             
         
