--- a/TP1/index.html
+++ b/TP1/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body bgcolor="orange">
+<body bgcolor="#24b72d">
 
 <body>
 <h1>Présentation du BTS SIO</h1>
@@ -24,8 +24,7 @@
 </table>
 
 
-
-
+<a href= "../sommaire.html">Retour</a><img src="left_arrow.gif" width="50" height="10">
 
 
 </body>
