--- a/Mission 2/CVetLettredemotivation.html
+++ b/Mission 2/CVetLettredemotivation.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body bgcolor="#ff5733">
+<body bgcolor="orange">
 <body>
-   <h1>Sommaire</h1>   
-   
-   <a href="page2.html" target="f2">Page 2</a> <br>
-   <a href="page3.html" target="f2">Page 3</a>
-
+  <h1>Liens Utiles</h1>
+  <ul>
+    <li>  <a href="CVmisajour.pdf" target="_blank"> CV 📄 </a> </li>
+    <li>  <a href="MaLettredemotivation.pdf" target="_blank"> Lettre de motivation 📝 </a> </li>
+  </ul>     
 </body>
 </html>
